--- a/CS/NonPersistentObjectsDemo.Module/NonPersistentObjectsDemo.Module.csproj
+++ b/CS/NonPersistentObjectsDemo.Module/NonPersistentObjectsDemo.Module.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Controllers\NonPersistentObjectActivatorController.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Controllers\ProductViewNestedCollectionController.cs" />
     <Compile Include="DatabaseUpdate\Updater.cs" />
     <Compile Include="Module.cs">
       <SubType>Component</SubType>
